--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.5.1",
+    "version": "0.5.2",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
     "files": [
@@ -31,7 +31,7 @@
         ]
     },
     "dependencies": {
-        "codesandbox": "2.1.16",
+        "codesandbox-import-utils": "^2.1.16",
         "markdown-it-container": "^3.0.0",
         "prismjs": "^1.20.0",
         "vuepress-plugin-code-copy": "^1.0.6"
